--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.js
 _site/
 .env
 
 # testing
-/coverage
+coverage/
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
@@ -24,10 +24,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-### VisualStudioCode ###
-.vscode/*
+# VisualStudioCode
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-/bin
+
+# C#
+bin/
